[package]
authors = ["The Rust Project Developers"]
name = "rustc_incremental"
version = "0.0.0"

[lib]
name = "rustc_incremental"
path = "lib.rs"
crate-type = ["dylib"]

[dependencies]
graphviz = { path = "../libgraphviz" }
rustc = { path = "../librustc" }
rustc_mir = { path = "../librustc_mir" }
rustc_const_math = { path = "../librustc_const_math" }
rustc_data_structures = { path = "../librustc_data_structures" }
serialize = { path = "../libserialize" }
log = { path = "../liblog" }
syntax = { path = "../libsyntax" }
syntax_pos = { path = "../libsyntax_pos" }
